--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="tela-inicial">
     <p class="txt-inicial">
-      <i class="bi bi-stars"></i>Sesc trasnformando vidas!
+      <i class="bi bi-stars"></i>Sesc trasnformando vidas
     </p>
     <h1 class="txt-inicial">
       Porque cada momento de
